Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 # The organization where you want to register the app in the app creation manifest flow.
 # If set, the app is registered for an organization (https://github.com/organizations/ORGANIZATION/settings/apps/new),
 # if not set, the GitHub app would be registered for the user account (https://github.com/settings/apps/new).
-# GH_ORG=
+GH_ORG=UoS-IT-Services-Sandbox
 
 # The ID of your GitHub App
-# APP_ID=
-# WEBHOOK_SECRET=development
+APP_ID=919809
+WEBHOOK_SECRET=PSwzBueoPEMbAqJUGRmSN0OpZquWsFz7jGMMVUFtMCs=
+PRIVATE_KEY_PATH: private-key.pem
 
 # Uncomment this to get verbose logging
 # LOG_LEVEL=trace # or `info` to show less
