--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       GH_ORG: ${GH_ORG}
       WEBHOOK_PROXY_URL: ${WEBHOOK_PROXY_URL}
       PRIVATE_KEY: ${PRIVATE_KEY}
+      PRIVATE_KEY_PATH: ${PRIVATE_KEY_PATH}
       WEBHOOK_SECRET: ${WEBHOOK_SECRET}
       GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID}
       GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET}
